sfdx-source/cozycub/main/default/objects/Game__c/fields/Bet__c.field-meta.xml
<CustomField>
    <fullName>Bet__c</fullName>
    <label>Bet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>