sfdx-source/cozycub/main/default/objects/Game__c/fields/PlayedRound__c.field-meta.xml
<CustomField>
    <fullName>PlayedRound__c</fullName>
    <label>PlayedRound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>