sfdx-source/cozycub/main/default/objects/Game__c/fields/PlayedRounds__c.field-meta.xml
<CustomField>
    <fullName>PlayedRounds__c</fullName>
    <label>PlayedRounds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>